# anhc_rosbot

./: .gitignore  README.md  anhc_tests.py  frames_2026-04-03_15.02.58.gv  frames_2026-04-03_16.05.41.gv  frames_2026-04-05_14.39.41.gv  frames_2026-04-06_08.59.06.gv
src/anhc_robot_bringup/: CMakeLists.txt  package.xml
src/anhc_robot_bringup/launch/: anhc_full_system.launch.py  anhc_rviz.launch.py  anhc_simulation.launch.py  anhc_static_tf.launch.py  anhc_verify.launch.py
src/anhc_robot_description/: CMakeLists.txt  package.xml
src/anhc_robot_description/config/: anhc_controllers.yaml
src/anhc_robot_description/rviz/: anhc_robot.rviz
src/anhc_robot_description/urdf/: main_robot.urdf.xacro
src/anhc_robot_description/urdf/control/: anhc_control.xacro
src/anhc_robot_description/urdf/mech/: anhc_base.xacro
src/anhc_robot_description/urdf/robots/: anhc_robot.xacro
src/anhc_robot_description/urdf/sensors/: anhc_camera.xacro  anhc_lidar_2d.xacro  anhc_lidar_3d.xacro
src/anhc_robot_navigation/: package.xml  setup.cfg  setup.py
src/anhc_robot_navigation/anhc_robot_navigation/: anhc_astar.py  anhc_integration_test.py  anhc_map_handler.py  anhc_path_follower.py  anhc_planner.py
src/anhc_robot_navigation/config/: anhc_navigation.yaml  nav2_params_rosmaster.yaml
src/anhc_robot_navigation/launch/: anhc_navigation.launch.py
src/anhc_robot_simulation/: CMakeLists.txt  package.xml
src/anhc_robot_simulation/config/: anhc_ros_bridge.yaml
src/anhc_robot_simulation/launch/: anhc_gazebo.launch.py
src/anhc_robot_simulation/models/anhc_obstacle/: model.config  model.sdf
src/anhc_robot_simulation/worlds/: anhc_simple_world.sdf
