<?xml version="1.0"?>
<package format="3">
  <name>anhc_robot_description</name>
  <version>1.0.0</version>
  <description>URDF/Xacro robot description for ANHC 4-wheel mobile robot</description>
  <maintainer email="dev@anhc.com">anhc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
