<?xml version="1.0"?>
<package format="3">
  <name>anhc_robot_simulation</name>
  <version>1.0.0</version>
  <description>Gazebo world and simulation assets for ANHC robot</description>
  <maintainer email="dev@anhc.com">anhc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
